// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickListComponent for objects Should not fail horribly 1`] = `
<PickListComponent
  appSession={Object {}}
  classExistsOnDom={[Function]}
  createAnalysis={[Function]}
  createConservation={[Function]}
  createSample={[Function]}
  emitError={[Function]}
  emitSuccess={[Function]}
  history={
    Object {
      "push": [Function],
    }
  }
  iconRendrer={[Function]}
  isTypeNode={false}
  markMainObject={[Function]}
  markNode={[Function]}
  markObject={[Function]}
  moveItems={[Function]}
  pickList={
    Object {
      "nodes": Array [
        Object {
          "marked": true,
          "path": Array [
            1,
          ],
          "value": Object {
            "id": 1,
            "name": "Hei",
          },
        },
        Object {
          "marked": true,
          "path": Array [
            1,
            2,
          ],
          "value": Object {
            "id": 2,
            "name": "Hei",
          },
        },
        Object {
          "marked": true,
          "path": Array [
            1,
            3,
          ],
          "value": Object {
            "id": 3,
            "name": "Hei",
          },
        },
        Object {
          "marked": true,
          "path": Array [
            1,
            3,
          ],
          "value": Object {
            "id": 4,
            "name": "Hei",
          },
        },
      ],
      "objects": Array [
        Object {
          "marked": true,
          "path": Array [
            1,
          ],
          "value": Object {
            "id": 1,
            "mainObjectId": 1,
            "term": "Test21",
          },
        },
        Object {
          "marked": true,
          "path": Array [
            1,
            2,
          ],
          "value": Object {
            "id": 2,
            "mainObjectId": 1,
            "term": "Test2",
          },
        },
        Object {
          "marked": false,
          "path": Array [
            1,
            3,
          ],
          "value": Object {
            "id": 3,
            "term": "Test23",
          },
        },
      ],
    }
  }
  refreshNode={[Function]}
  refreshObjects={[Function]}
  removeNode={[Function]}
  removeObject={[Function]}
  scannerEnabled={true}
  toggleScanner={[Function]}
  type="objects"
>
  <div>
    <main>
      <Grid
        bsClass="container"
        componentClass="div"
        fluid={false}
      >
        <div
          className="container"
        >
          <PageHeader
            bsClass="page-header"
          >
            <div
              className="page-header"
            >
              <h1>
                <div>
                  <span>
                    Plukkliste (objekter)
                  </span>
                  <div
                    style={
                      Object {
                        "float": "right",
                        "margin": "0 25px 0 0",
                      }
                    }
                  >
                    <ScannerButton
                      enabled={true}
                      onClick={[Function]}
                    >
                      <Button
                        active={true}
                        block={false}
                        bsClass="btn"
                        bsStyle="default"
                        className="scannerEnabled"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <button
                          className="scannerEnabled btn btn-default active"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          <img
                            alt="scan"
                            height={25}
                            src="scannerIconWhite.png"
                          />
                        </button>
                      </Button>
                    </ScannerButton>
                  </div>
                </div>
              </h1>
            </div>
          </PageHeader>
          <Table
            bordered={false}
            bsClass="table"
            condensed={true}
            hover={true}
            responsive={true}
            striped={true}
          >
            <div
              className="table-responsive"
            >
              <table
                className="table table-striped table-condensed table-hover"
              >
                <thead>
                  <tr>
                    <th
                      style={
                        Object {
                          "textAlign": "left",
                          "width": "2em",
                        }
                      }
                    >
                      <input
                        checked={false}
                        className="normalAction"
                        onChange={[Function]}
                        title="Velg alle"
                        type="checkbox"
                      />
                    </th>
                    <th
                      style={
                        Object {
                          "textAlign": "left",
                          "verticalAlign": "bottom",
                        }
                      }
                    >
                      <span
                        className="icon icon-musit-testtube"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "grey",
                            "fontSize": "1.5em",
                          }
                        }
                        title="Opprett prøve"
                      />
                      <span
                        className="normalActionNoPadding"
                        style={
                          Object {
                            "color": "#337ab7",
                            "fontSize": "0.8em",
                          }
                        }
                        title="Valgt objekte(r)"
                      >
                        (2)
                      </span>
                      <span>
                        <span
                          className="icon-musit-microscope normalAction"
                          onClick={[Function]}
                          style={
                            Object {
                              "color": "#337ab7",
                              "fontSize": "1.5em",
                            }
                          }
                          title="Opprett analyse"
                        />
                        <span
                          className="normalActionNoPadding"
                          style={
                            Object {
                              "color": "#337ab7",
                              "fontSize": "0.8em",
                            }
                          }
                          title="Valgt objekte(r)"
                        >
                          (2)
                        </span>
                      </span>
                      <FontAwesome
                        className="normalAction"
                        name="truck"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": null,
                            "fontSize": "1.5em",
                          }
                        }
                        title="Flytt valgte objekter"
                      >
                        <span
                          aria-hidden={true}
                          className="fa fa-truck normalAction"
                          onClick={[Function]}
                          style={
                            Object {
                              "color": null,
                              "fontSize": "1.5em",
                            }
                          }
                          title="Flytt valgte objekter"
                        />
                      </FontAwesome>
                      <span
                        className="normalActionNoPadding"
                        style={
                          Object {
                            "color": "#337ab7",
                            "fontSize": "0.8em",
                          }
                        }
                        title="Valgt objekte(r)"
                      >
                        (2)
                      </span>
                      <FontAwesome
                        className="normalAction"
                        name="bank"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": null,
                            "fontSize": "1.5em",
                          }
                        }
                        title="Opprett bruk og bevaring"
                      >
                        <span
                          aria-hidden={true}
                          className="fa fa-bank normalAction"
                          onClick={[Function]}
                          style={
                            Object {
                              "color": null,
                              "fontSize": "1.5em",
                            }
                          }
                          title="Opprett bruk og bevaring"
                        />
                      </FontAwesome>
                      <span
                        className="normalActionNoPadding"
                        style={
                          Object {
                            "color": "#337ab7",
                            "fontSize": "0.8em",
                          }
                        }
                        title="Valgt objekte(r)"
                      >
                        (2)
                      </span>
                      <FontAwesome
                        className="normalAction"
                        name="remove"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": null,
                            "fontSize": "1.5em",
                          }
                        }
                        title="Fjern valgte objekter fra listen"
                      >
                        <span
                          aria-hidden={true}
                          className="fa fa-remove normalAction"
                          onClick={[Function]}
                          style={
                            Object {
                              "color": null,
                              "fontSize": "1.5em",
                            }
                          }
                          title="Fjern valgte objekter fra listen"
                        />
                      </FontAwesome>
                      <span
                        className="normalActionNoPadding"
                        style={
                          Object {
                            "color": "#337ab7",
                            "fontSize": "0.8em",
                          }
                        }
                        title="Valgt objekte(r)"
                      >
                        (2)
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    className="mainObject"
                  >
                    <td
                      style={
                        Object {
                          "textAlign": "left",
                          "verticalAlign": "middle",
                          "width": "3em",
                        }
                      }
                    >
                      <span>
                        <input
                          checked="checked"
                          onChange={[Function]}
                          type="checkbox"
                        />
                      </span>
                    </td>
                    <td>
                      <span
                        className="pickListIcon"
                      >
                        <span
                          className="icon icon-musitobject"
                        />
                         
                        <div>
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          >
                            Test21
                          </span>
                          <div
                            className="labelText"
                          >
                            <Breadcrumb
                              allActive={true}
                              node={
                                Array [
                                  1,
                                ]
                              }
                              onClickCrumb={[Function]}
                            >
                              <div>
                                <OverlayTrigger
                                  defaultOverlayShown={false}
                                  overlay={
                                    <Popover
                                      bsClass="popover"
                                      id="breadcrumb tooltip"
                                      placement="right"
                                    >
                                      Magasin
                                    </Popover>
                                  }
                                  placement="top"
                                  trigger={
                                    Array [
                                      "hover",
                                      "focus",
                                    ]
                                  }
                                >
                                  <span
                                    onBlur={[Function]}
                                    onClick={null}
                                    onFocus={[Function]}
                                    onMouseOut={[Function]}
                                    onMouseOver={[Function]}
                                  >
                                    <a
                                      href="/magasin"
                                      onClick={[Function]}
                                    >
                                      <FontAwesome
                                        name="home"
                                        style={
                                          Object {
                                            "fontSize": "1.5em",
                                            "padding": "1px",
                                          }
                                        }
                                      >
                                        <span
                                          aria-hidden={true}
                                          className="fa fa-home"
                                          style={
                                            Object {
                                              "fontSize": "1.5em",
                                              "padding": "1px",
                                            }
                                          }
                                        />
                                      </FontAwesome>
                                       
                                    </a>
                                     / 
                                  </span>
                                </OverlayTrigger>
                                <span>
                                  <OverlayTrigger
                                    defaultOverlayShown={false}
                                    overlay={
                                      <Popover
                                        bsClass="popover"
                                        id="breadcrumb tooltip"
                                        placement="right"
                                      />
                                    }
                                    placement="top"
                                    trigger={
                                      Array [
                                        "hover",
                                        "focus",
                                      ]
                                    }
                                  >
                                    <span
                                      onBlur={[Function]}
                                      onClick={null}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                    >
                                      <span>
                                        <FontAwesome
                                          name="folder"
                                          style={
                                            Object {
                                              "padding": "1px",
                                            }
                                          }
                                        >
                                          <span
                                            aria-hidden={true}
                                            className="fa fa-folder"
                                            style={
                                              Object {
                                                "padding": "1px",
                                              }
                                            }
                                          />
                                        </FontAwesome>
                                      </span>
                                    </span>
                                  </OverlayTrigger>
                                </span>
                              </div>
                            </Breadcrumb>
                          </div>
                        </div>
                      </span>
                    </td>
                  </tr>
                  <tr
                    className="childObject"
                  >
                    <td
                      style={
                        Object {
                          "textAlign": "left",
                          "verticalAlign": "middle",
                          "width": "3em",
                        }
                      }
                    >
                      <span>
                        <input
                          checked="checked"
                          disabled={true}
                          type="checkbox"
                        />
                      </span>
                    </td>
                    <td>
                      <span
                        className="pickListIcon"
                      >
                        <span
                          className="icon icon-musitobject"
                        />
                         
                        <div>
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          >
                            Test2
                          </span>
                          <div
                            className="labelText"
                          >
                            <Breadcrumb
                              allActive={true}
                              node={
                                Array [
                                  1,
                                  2,
                                ]
                              }
                              onClickCrumb={[Function]}
                            >
                              <div>
                                <OverlayTrigger
                                  defaultOverlayShown={false}
                                  overlay={
                                    <Popover
                                      bsClass="popover"
                                      id="breadcrumb tooltip"
                                      placement="right"
                                    >
                                      Magasin
                                    </Popover>
                                  }
                                  placement="top"
                                  trigger={
                                    Array [
                                      "hover",
                                      "focus",
                                    ]
                                  }
                                >
                                  <span
                                    onBlur={[Function]}
                                    onClick={null}
                                    onFocus={[Function]}
                                    onMouseOut={[Function]}
                                    onMouseOver={[Function]}
                                  >
                                    <a
                                      href="/magasin"
                                      onClick={[Function]}
                                    >
                                      <FontAwesome
                                        name="home"
                                        style={
                                          Object {
                                            "fontSize": "1.5em",
                                            "padding": "1px",
                                          }
                                        }
                                      >
                                        <span
                                          aria-hidden={true}
                                          className="fa fa-home"
                                          style={
                                            Object {
                                              "fontSize": "1.5em",
                                              "padding": "1px",
                                            }
                                          }
                                        />
                                      </FontAwesome>
                                       
                                    </a>
                                     / 
                                  </span>
                                </OverlayTrigger>
                                <span>
                                  <OverlayTrigger
                                    defaultOverlayShown={false}
                                    overlay={
                                      <Popover
                                        bsClass="popover"
                                        id="breadcrumb tooltip"
                                        placement="right"
                                      />
                                    }
                                    placement="top"
                                    trigger={
                                      Array [
                                        "hover",
                                        "focus",
                                      ]
                                    }
                                  >
                                    <span
                                      onBlur={[Function]}
                                      onClick={null}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                    >
                                      <span>
                                        <FontAwesome
                                          name="folder"
                                          style={
                                            Object {
                                              "padding": "1px",
                                            }
                                          }
                                        >
                                          <span
                                            aria-hidden={true}
                                            className="fa fa-folder"
                                            style={
                                              Object {
                                                "padding": "1px",
                                              }
                                            }
                                          />
                                        </FontAwesome>
                                      </span>
                                       / 
                                    </span>
                                  </OverlayTrigger>
                                </span>
                                <span>
                                  <OverlayTrigger
                                    defaultOverlayShown={false}
                                    overlay={
                                      <Popover
                                        bsClass="popover"
                                        id="breadcrumb tooltip"
                                        placement="right"
                                      />
                                    }
                                    placement="top"
                                    trigger={
                                      Array [
                                        "hover",
                                        "focus",
                                      ]
                                    }
                                  >
                                    <span
                                      onBlur={[Function]}
                                      onClick={null}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                    >
                                      <span>
                                        <FontAwesome
                                          name="folder"
                                          style={
                                            Object {
                                              "padding": "1px",
                                            }
                                          }
                                        >
                                          <span
                                            aria-hidden={true}
                                            className="fa fa-folder"
                                            style={
                                              Object {
                                                "padding": "1px",
                                              }
                                            }
                                          />
                                        </FontAwesome>
                                      </span>
                                    </span>
                                  </OverlayTrigger>
                                </span>
                              </div>
                            </Breadcrumb>
                          </div>
                        </div>
                      </span>
                    </td>
                  </tr>
                  <tr
                    className="mainObject"
                  >
                    <td
                      style={
                        Object {
                          "textAlign": "left",
                          "verticalAlign": "middle",
                          "width": "3em",
                        }
                      }
                    >
                      <span>
                        <input
                          checked=""
                          onChange={[Function]}
                          type="checkbox"
                        />
                      </span>
                    </td>
                    <td>
                      <span
                        className="pickListIcon"
                      >
                        <span
                          className="icon icon-musitobject"
                        />
                         
                        <div>
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          />
                          <span
                            style={
                              Object {
                                "paddingLeft": "1em",
                              }
                            }
                          >
                            Test23
                          </span>
                          <div
                            className="labelText"
                          >
                            <Breadcrumb
                              allActive={true}
                              node={
                                Array [
                                  1,
                                  3,
                                ]
                              }
                              onClickCrumb={[Function]}
                            >
                              <div>
                                <OverlayTrigger
                                  defaultOverlayShown={false}
                                  overlay={
                                    <Popover
                                      bsClass="popover"
                                      id="breadcrumb tooltip"
                                      placement="right"
                                    >
                                      Magasin
                                    </Popover>
                                  }
                                  placement="top"
                                  trigger={
                                    Array [
                                      "hover",
                                      "focus",
                                    ]
                                  }
                                >
                                  <span
                                    onBlur={[Function]}
                                    onClick={null}
                                    onFocus={[Function]}
                                    onMouseOut={[Function]}
                                    onMouseOver={[Function]}
                                  >
                                    <a
                                      href="/magasin"
                                      onClick={[Function]}
                                    >
                                      <FontAwesome
                                        name="home"
                                        style={
                                          Object {
                                            "fontSize": "1.5em",
                                            "padding": "1px",
                                          }
                                        }
                                      >
                                        <span
                                          aria-hidden={true}
                                          className="fa fa-home"
                                          style={
                                            Object {
                                              "fontSize": "1.5em",
                                              "padding": "1px",
                                            }
                                          }
                                        />
                                      </FontAwesome>
                                       
                                    </a>
                                     / 
                                  </span>
                                </OverlayTrigger>
                                <span>
                                  <OverlayTrigger
                                    defaultOverlayShown={false}
                                    overlay={
                                      <Popover
                                        bsClass="popover"
                                        id="breadcrumb tooltip"
                                        placement="right"
                                      />
                                    }
                                    placement="top"
                                    trigger={
                                      Array [
                                        "hover",
                                        "focus",
                                      ]
                                    }
                                  >
                                    <span
                                      onBlur={[Function]}
                                      onClick={null}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                    >
                                      <span>
                                        <FontAwesome
                                          name="folder"
                                          style={
                                            Object {
                                              "padding": "1px",
                                            }
                                          }
                                        >
                                          <span
                                            aria-hidden={true}
                                            className="fa fa-folder"
                                            style={
                                              Object {
                                                "padding": "1px",
                                              }
                                            }
                                          />
                                        </FontAwesome>
                                      </span>
                                       / 
                                    </span>
                                  </OverlayTrigger>
                                </span>
                                <span>
                                  <OverlayTrigger
                                    defaultOverlayShown={false}
                                    overlay={
                                      <Popover
                                        bsClass="popover"
                                        id="breadcrumb tooltip"
                                        placement="right"
                                      />
                                    }
                                    placement="top"
                                    trigger={
                                      Array [
                                        "hover",
                                        "focus",
                                      ]
                                    }
                                  >
                                    <span
                                      onBlur={[Function]}
                                      onClick={null}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                    >
                                      <span>
                                        <FontAwesome
                                          name="folder"
                                          style={
                                            Object {
                                              "padding": "1px",
                                            }
                                          }
                                        >
                                          <span
                                            aria-hidden={true}
                                            className="fa fa-folder"
                                            style={
                                              Object {
                                                "padding": "1px",
                                              }
                                            }
                                          />
                                        </FontAwesome>
                                      </span>
                                    </span>
                                  </OverlayTrigger>
                                </span>
                              </div>
                            </Breadcrumb>
                          </div>
                        </div>
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </Table>
          <div
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2
            /
            3
              
            objekte(r) valgt.
          </div>
        </div>
      </Grid>
    </main>
  </div>
</PickListComponent>
`;

exports[`PickListComponent for objects should display component (objects) correctly 1`] = `
<div>
  <main>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}
    >
      <PageHeader
        bsClass="page-header"
      >
        <div>
          <span>
            Plukkliste (objekter)
          </span>
          <div
            style={
              Object {
                "float": "right",
                "margin": "0 25px 0 0",
              }
            }
          >
            <ScannerButton
              enabled={true}
              onClick={[Function]}
            />
          </div>
        </div>
      </PageHeader>
      <Table
        bordered={false}
        bsClass="table"
        condensed={true}
        hover={true}
        responsive={true}
        striped={true}
      >
        <thead>
          <tr>
            <th
              style={
                Object {
                  "textAlign": "left",
                  "width": "2em",
                }
              }
            >
              <input
                checked={false}
                className="normalAction"
                onChange={[Function]}
                title="Velg alle"
                type="checkbox"
              />
            </th>
            <th
              style={
                Object {
                  "textAlign": "left",
                  "verticalAlign": "bottom",
                }
              }
            >
              <span
                className="icon icon-musit-testtube"
                onClick={[Function]}
                style={
                  Object {
                    "color": "grey",
                    "fontSize": "1.5em",
                  }
                }
                title="Opprett prøve"
              />
              <span
                className="normalActionNoPadding"
                style={
                  Object {
                    "color": "#337ab7",
                    "fontSize": "0.8em",
                  }
                }
                title="Valgt objekte(r)"
              >
                (2)
              </span>
              <span>
                <span
                  className="icon-musit-microscope normalAction"
                  onClick={[Function]}
                  style={
                    Object {
                      "color": "#337ab7",
                      "fontSize": "1.5em",
                    }
                  }
                  title="Opprett analyse"
                />
                <span
                  className="normalActionNoPadding"
                  style={
                    Object {
                      "color": "#337ab7",
                      "fontSize": "0.8em",
                    }
                  }
                  title="Valgt objekte(r)"
                >
                  (2)
                </span>
              </span>
              <FontAwesome
                className="normalAction"
                name="truck"
                onClick={[Function]}
                style={
                  Object {
                    "color": null,
                    "fontSize": "1.5em",
                  }
                }
                title="Flytt valgte objekter"
              />
              <span
                className="normalActionNoPadding"
                style={
                  Object {
                    "color": "#337ab7",
                    "fontSize": "0.8em",
                  }
                }
                title="Valgt objekte(r)"
              >
                (2)
              </span>
              <FontAwesome
                className="normalAction"
                name="bank"
                onClick={[Function]}
                style={
                  Object {
                    "color": null,
                    "fontSize": "1.5em",
                  }
                }
                title="Opprett bruk og bevaring"
              />
              <span
                className="normalActionNoPadding"
                style={
                  Object {
                    "color": "#337ab7",
                    "fontSize": "0.8em",
                  }
                }
                title="Valgt objekte(r)"
              >
                (2)
              </span>
              <FontAwesome
                className="normalAction"
                name="remove"
                onClick={[Function]}
                style={
                  Object {
                    "color": null,
                    "fontSize": "1.5em",
                  }
                }
                title="Fjern valgte objekter fra listen"
              />
              <span
                className="normalActionNoPadding"
                style={
                  Object {
                    "color": "#337ab7",
                    "fontSize": "0.8em",
                  }
                }
                title="Valgt objekte(r)"
              >
                (2)
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="mainObject"
          >
            <td
              style={
                Object {
                  "textAlign": "left",
                  "verticalAlign": "middle",
                  "width": "3em",
                }
              }
            >
              <span>
                <input
                  checked="checked"
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
            </td>
            <td>
              <span
                className="pickListIcon"
              >
                <span
                  className="icon icon-musitobject"
                />
                 
                <div>
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  >
                    Test21
                  </span>
                  <div
                    className="labelText"
                  >
                    <Breadcrumb
                      allActive={true}
                      node={
                        Array [
                          1,
                        ]
                      }
                      onClickCrumb={[Function]}
                    />
                  </div>
                </div>
              </span>
            </td>
          </tr>
          <tr
            className="childObject"
          >
            <td
              style={
                Object {
                  "textAlign": "left",
                  "verticalAlign": "middle",
                  "width": "3em",
                }
              }
            >
              <span>
                <input
                  checked="checked"
                  disabled={true}
                  type="checkbox"
                />
              </span>
            </td>
            <td>
              <span
                className="pickListIcon"
              >
                <span
                  className="icon icon-musitobject"
                />
                 
                <div>
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  >
                    Test2
                  </span>
                  <div
                    className="labelText"
                  >
                    <Breadcrumb
                      allActive={true}
                      node={
                        Array [
                          1,
                          2,
                        ]
                      }
                      onClickCrumb={[Function]}
                    />
                  </div>
                </div>
              </span>
            </td>
          </tr>
          <tr
            className="mainObject"
          >
            <td
              style={
                Object {
                  "textAlign": "left",
                  "verticalAlign": "middle",
                  "width": "3em",
                }
              }
            >
              <span>
                <input
                  checked=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
            </td>
            <td>
              <span
                className="pickListIcon"
              >
                <span
                  className="icon icon-musitobject"
                />
                 
                <div>
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  />
                  <span
                    style={
                      Object {
                        "paddingLeft": "1em",
                      }
                    }
                  >
                    Test23
                  </span>
                  <div
                    className="labelText"
                  >
                    <Breadcrumb
                      allActive={true}
                      node={
                        Array [
                          1,
                          3,
                        ]
                      }
                      onClickCrumb={[Function]}
                    />
                  </div>
                </div>
              </span>
            </td>
          </tr>
        </tbody>
      </Table>
      <div
        style={
          Object {
            "textAlign": "left",
          }
        }
      >
        2
        /
        3
          
        objekte(r) valgt.
      </div>
    </Grid>
  </main>
</div>
`;
